Ai chat added. 1. Day/Night themes configurated 2. Icons changed. 3. Polished themes and styles. 4. Switched back to BottomNavigationBar 5. Now chat is saved to local db and history is shown after restart (last 7 days). 6. Progress bar added. Implemented in Main Activity, all the fragments can use it via BehaviorSubject. 7. Simplified RemoteApi calls, now they all automatically add correct threads to subscribe and observe in. Progress bar is also automatically shown and hidden. 8. Tweaked a couple of things in UI. 9. Switched to blue color scheme.

--- a/app/src/main/res/drawable/rounded_up_rectangle.xml
+++ b/app/src/main/res/drawable/rounded_up_rectangle.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/background3" />
+        android:color="@color/base3" />
     <corners
         android:topLeftRadius="15dp"
         android:topRightRadius="15dp" />
