--- a/app/src/main/res/drawable/rounded_rectangle.xml
+++ b/app/src/main/res/drawable/rounded_rectangle.xml
@@ -2,14 +2,14 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/background3" />
+        android:color="@color/base3" />
     <corners
         android:topLeftRadius="@dimen/corner_radius"
         android:topRightRadius="@dimen/corner_radius"
         android:bottomLeftRadius="@dimen/corner_radius"
         android:bottomRightRadius="@dimen/corner_radius"/>
     <stroke
-        android:color="@color/background8"
+        android:color="@color/base8"
         android:width="2dp" />
 
 </shape>
