--- a/app/src/main/res/drawable/shape_out_bubble.xml
+++ b/app/src/main/res/drawable/shape_out_bubble.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-<!--    Shadow Layer
-
     <item>
         <rotate
             android:fromDegrees="40"
@@ -10,97 +8,13 @@
             android:pivotY="0%"
             android:toDegrees="0">
             <shape android:shape="rectangle">
-                <corners android:radius="4dp" />
-                <padding
-                    android:bottom="1px"
-                    android:left="1px"
-                    android:right="1px" />
-                <solid android:color="@color/transparent_shadow_color" />
+                <solid android:color="@color/base3" />
             </shape>
         </rotate>
     </item>
     <item android:right="10dp">
         <shape android:shape="rectangle">
-            <corners android:radius="4dp" />
-            <padding
-                android:bottom="1px"
-                android:left="1px"
-                android:right="1px" />
-            <solid android:color="@color/transparent_shadow_color" />
-        </shape>
-    </item>
-
-    ===============
-
-    <item>
-        <rotate
-            android:fromDegrees="40"
-            android:pivotX="100%"
-            android:pivotY="0%"
-            android:toDegrees="0">
-            <shape android:shape="rectangle">
-                <corners android:radius="4dp" />
-                <padding android:bottom="1px" />
-                <solid android:color="@color/semitransparent_shadow_color" />
-            </shape>
-        </rotate>
-    </item>
-    <item android:right="10dp">
-        <shape android:shape="rectangle">
-            <corners android:radius="4dp" />
-            <padding android:bottom="1px" />
-            <solid android:color="@color/semitransparent_shadow_color" />
-        </shape>
-    </item>
-
-    ===============
-
-    <item>
-        <rotate
-            android:fromDegrees="40"
-            android:pivotX="100%"
-            android:pivotY="0%"
-            android:toDegrees="0">
-            <shape android:shape="rectangle">
-                <corners android:radius="4dp" />
-                <padding
-                    android:bottom="1px"
-                    android:left="1px"
-                    android:right="1px" />
-                <solid android:color="@color/least_transparent_shadow_color" />
-            </shape>
-        </rotate>
-    </item>
-    <item android:right="10dp">
-        <shape android:shape="rectangle">
-            <corners android:radius="4dp" />
-            <padding
-                android:bottom="1px"
-                android:left="1px"
-                android:right="1px" />
-            <solid android:color="@color/least_transparent_shadow_color" />
-        </shape>
-    </item>
-
-    ===============
-
-
-    ForeGround-->
-
-    <item>
-        <rotate
-            android:fromDegrees="40"
-            android:pivotX="100%"
-            android:pivotY="0%"
-            android:toDegrees="0">
-            <shape android:shape="rectangle">
-                <solid android:color="@color/accent2" />
-            </shape>
-        </rotate>
-    </item>
-    <item android:right="10dp">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/accent2" />
+            <solid android:color="@color/base3" />
             <corners android:radius="14dp" />
         </shape>
     </item>
