--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -9,13 +9,33 @@
     android:padding="@dimen/medium_padding"
     tools:context=".views.fragments.ChartFragment">
 
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/symbol"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/logo"
+        app:layout_constraintTop_toTopOf="@+id/logo"
+        app:layout_constraintBottom_toBottomOf="@+id/logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingStart="@dimen/big_padding"
+        android:textSize="@dimen/big_text"
+        android:textStyle="bold"
+        tools:text="Symbol" />
+
     <LinearLayout
         android:id="@+id/price_stat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="fill_horizontal"
         android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginTop="@dimen/medium_padding"
+        app:layout_constraintTop_toBottomOf="@+id/logo">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -25,14 +45,14 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/symbol"
+                android:id="@+id/price_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="end"
                 android:maxLines="1"
-                android:textAlignment="center"
+                android:textAlignment="viewEnd"
                 android:textSize="@dimen/medium_text"
-                tools:text="SYMBOL" />
+                android:text="Price:" />
 
             <TextView
                 android:id="@+id/ath_text"
@@ -42,14 +62,14 @@
                 android:maxLines="1"
                 android:text="ATH:"
                 android:textAlignment="viewEnd"
-                android:textSize="@dimen/small_text" />
+                android:textSize="@dimen/medium_text" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="20"
+            android:layout_weight="30"
             android:padding="@dimen/small_padding"
             android:orientation="vertical">
 
@@ -68,10 +88,12 @@
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:textAlignment="viewStart"
-                android:textSize="@dimen/small_text"
+                android:textSize="@dimen/medium_text"
                 tools:text="ATH" />
 
         </LinearLayout>
+
+        <include layout="@layout/vertical_line" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -96,7 +118,7 @@
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:textAlignment="viewStart"
-                android:textSize="@dimen/small_text"
+                android:textSize="@dimen/medium_text"
                 android:text="MCap:" />
 
         </LinearLayout>
@@ -104,7 +126,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="20"
+            android:layout_weight="30"
             android:padding="@dimen/small_padding"
             android:orientation="vertical">
 
@@ -123,7 +145,7 @@
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:textAlignment="viewStart"
-                android:textSize="@dimen/small_text"
+                android:textSize="@dimen/medium_text"
                 tools:text="mcap" />
 
         </LinearLayout>
@@ -412,6 +434,20 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/ytd"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_margin="@dimen/min_padding"
+            android:background="@drawable/rounded_rectangle"
+            android:gravity="center"
+            android:padding="@dimen/min_padding"
+            android:text="YTD"
+            android:textSize="@dimen/medium_text"
+            app:layout_constraintStart_toEndOf="@+id/m6"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/y1"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
@@ -422,7 +458,7 @@
             android:padding="@dimen/min_padding"
             android:text="Y"
             android:textSize="@dimen/medium_text"
-            app:layout_constraintStart_toEndOf="@+id/m6"
+            app:layout_constraintStart_toEndOf="@+id/ytd"
             app:layout_constraintTop_toTopOf="parent" />
 
 
