--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/header"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/background1"
+                android:background="@color/base1"
                 android:padding="12dp"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:backgroundTint="@color/background3"
+            android:backgroundTint="@color/base3"
             android:contentDescription="@string/favorite"
             app:borderWidth="0dp"
             app:layout_anchor="@id/app_bar"
@@ -88,7 +88,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:layout_marginTop="12dp"
-                    android:background="@color/white"
+                    android:background="@color/textColor"
                     app:layout_constraintTop_toBottomOf="@+id/description" />
 
                 <TextView
@@ -116,7 +116,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:layout_marginTop="12dp"
-                    android:background="@color/white"
+                    android:background="@color/textColor"
                     app:layout_constraintTop_toBottomOf="@+id/info_list" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -151,7 +151,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:layout_marginTop="12dp"
-                    android:background="@color/white"
+                    android:background="@color/textColor"
                     app:layout_constraintTop_toBottomOf="@+id/tags_container" />
 
                 <TextView
@@ -178,7 +178,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:layout_marginTop="12dp"
-                    android:background="@color/white"
+                    android:background="@color/textColor"
                     app:layout_constraintTop_toBottomOf="@+id/urls" />
 
                 <TextView
@@ -206,7 +206,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:layout_marginTop="12dp"
-                    android:background="@color/white"
+                    android:background="@color/textColor"
                     app:layout_constraintTop_toBottomOf="@+id/urls" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
