--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -12,7 +12,7 @@
             android:id="@+id/rv_headers"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/background3"
+            android:background="@color/base3"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
             android:layout_marginTop="10dp"
