--- a/app/src/main/res/layout/main_coin_item.xml
+++ b/app/src/main/res/layout/main_coin_item.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main_item_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/background1"
+    android:background="@color/base1"
     android:gravity="center"
     android:padding="@dimen/medium_padding"
     android:layout_marginTop="@dimen/min_padding"
