--- a/app/src/main/res/layout/saved_coin_header.xml
+++ b/app/src/main/res/layout/saved_coin_header.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="6dp"
-    android:background="@color/background3"
+    android:background="@color/base3"
     android:orientation="horizontal"
     android:gravity="fill_vertical"
     android:paddingStart="22dp"
