--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,40 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="grey">#808080</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="green">#00FF00</color>
-    <color name="red">#FF4040</color>
+<!--    Defining night theme colors -->
+    <color name="base1">@color/blue9</color>
+    <color name="base2">@color/blue8</color>
+    <color name="baseDarkTransparent">@color/blue8Transparent</color>
+    <color name="base3">@color/blue7</color>
+    <color name="base4">@color/blue6</color>
+    <color name="base5">@color/blue5</color>
+    <color name="base6">@color/blue4</color>
+    <color name="base7">@color/blue3</color>
+    <color name="base8">@color/blue2</color>
+    <color name="base9">@color/blue1</color>
 
-    <color name="background1">#012b20</color>
-    <color name="background2">#055741</color>
-    <color name="background2Transparent">#20055741</color>
-    <color name="background3">#118062</color>
-    <color name="background4">#26a382</color>
-    <color name="background5">#47c4a3</color>
-    <color name="background6">#6fdec0</color>
-    <color name="background7">#9ef0da</color>
-    <color name="background8">#cffaef</color>
+    <color name="accent8">@color/red1</color>
+    <color name="accent7">@color/red2</color>
+    <color name="accent6">@color/red3</color>
+    <color name="accent5">@color/red4</color>
+    <color name="accent4">@color/red5</color>
+    <color name="accent3">@color/red6</color>
+    <color name="accent2">@color/red7</color>
+    <color name="accent1">@color/red8</color>
 
-    <color name="accent8">#fadbcf</color>
-    <color name="accent7">#f0b49e</color>
-    <color name="accent6">#de8d6f</color>
-    <color name="accent5">#c46847</color>
-    <color name="accent4">#a34726</color>
-    <color name="accent3">#802e11</color>
-    <color name="accent2">#571b05</color>
-    <color name="accent1">#2b0c01</color>
+    <color name="green">@color/lightGreen</color>
+    <color name="red">@color/lightRed</color>
 
-    <color name="iconColor">@color/background8</color>
-    <color name="iconColor2">@color/background6</color>
+    <color name="iconColor">@color/base8</color>
+    <color name="iconColor2">@color/base6</color>
     <color name="menu_item_color">@color/white</color>
-    <color name="lineColor">@color/background8</color>
+    <color name="lineColor">@color/base8</color>
     <color name="textColor">@color/white</color>
 
-    <color name="coinColor">#f2d654</color>
-    <color name="tokenColor">#d0d0d0</color>
+    <color name="coinColor">@color/lightGolden</color>
+    <color name="tokenColor">@color/lightGrey</color>
 
-    <color name="transparent_shadow_color">#01000000</color>
-    <color name="semitransparent_shadow_color">#09000000</color>
-    <color name="least_transparent_shadow_color">#10000000</color>
 </resources>
