--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -26,25 +26,25 @@
     </style>
 
     <style name="BottomBar" parent="Widget.Material3.BottomNavigationView">
-        <item name="android:background">@color/background1</item>
+        <item name="android:background">@color/base1</item>
         <item name="itemTextColor">@color/iconColor</item>
         <item name="itemIconTint">@color/iconColor</item>
     </style>
 
     <style name="DialogStyle" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
-        <item name="android:background">@color/background2</item>
+        <item name="android:background">@color/base2</item>
         <item name="android:textColor">@color/textColor</item>
         <item name="buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
         <item name="buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
     </style>
 
     <style name="NegativeButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="backgroundTint">@color/background1</item>
+        <item name="backgroundTint">@color/base1</item>
         <item name="android:textColor">@color/textColor</item>
     </style>
 
     <style name="PositiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="backgroundTint">@color/background1</item>
+        <item name="backgroundTint">@color/base1</item>
         <item name="android:textColor">@color/textColor</item>
     </style>
 
