--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,41 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+<!--    Defining color set-->
     <color name="black">#FF000000</color>
     <color name="grey">#808080</color>
+    <color name="darkGrey">#303030</color>
+    <color name="lightGrey">#d0d0d0</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#008000</color>
-    <color name="red">#FF0000</color>
+    <color name="darkGreen">#008000</color>
+    <color name="darkRed">#FF0000</color>
+    <color name="lightGreen">#00FF00</color>
+    <color name="lightRed">#FF4040</color>
+    <color name="golden">#b99800</color>
+    <color name="lightGolden">#f2d654</color>
 
+    <color name="green1">@color/white</color>
+    <color name="green2">#cffaef</color>
+    <color name="green3">#9ef0da</color>
+    <color name="green4">#6fdec0</color>
+    <color name="green5">#47c4a3</color>
+    <color name="green6">#26a382</color>
+    <color name="green7">#118062</color>
+    <color name="green8">#055741</color>
+    <color name="green8Transparent">#20055741</color>
+    <color name="green9">#012b20</color>
 
-    <color name="background1">@color/white</color>
-    <color name="background2">#cffaef</color>
-    <color name="background2Transparent">#20055741</color>
-    <color name="background3">#9ef0da</color>
-    <color name="background4">#6fdec0</color>
-    <color name="background5">#47c4a3</color>
-    <color name="background6">#26a382</color>
-    <color name="background7">#118062</color>
-    <color name="background8">#055741</color>
+    <color name="blue1">#f2f1f9</color>
+    <color name="blue2">#c2c2dc</color>
+    <color name="blue3">#9595bf</color>
+    <color name="blue4">#6a6a9e</color>
+    <color name="blue5">#515185</color>
+    <color name="blue6">#414161</color>
+    <color name="blue7">#31313f</color>
+    <color name="blue8">#1f1f24</color>
+    <color name="blue8Transparent">#200e0e0f</color>
+    <color name="blue9">#0e0e0f</color>
 
-    <color name="accent1">#fadbcf</color>
-    <color name="accent2">#f0b49e</color>
-    <color name="accent3">#de8d6f</color>
-    <color name="accent4">#c46847</color>
-    <color name="accent5">#a34726</color>
-    <color name="accent6">#802e11</color>
-    <color name="accent7">#571b05</color>
-    <color name="accent8">#2b0c01</color>
+    <color name="red1">#fadbcf</color>
+    <color name="red2">#f0b49e</color>
+    <color name="red3">#de8d6f</color>
+    <color name="red4">#c46847</color>
+    <color name="red5">#a34726</color>
+    <color name="red6">#802e11</color>
+    <color name="red7">#571b05</color>
+    <color name="red8">#2b0c01</color>
 
-    <color name="iconColor">@color/background8</color>
-    <color name="iconColor2">@color/background6</color>
+<!--    Defining light theme colors-->
+    <color name="base1">@color/white</color>
+    <color name="base2">@color/blue1</color>
+    <color name="base3">@color/blue2</color>
+    <color name="base4">@color/blue3</color>
+    <color name="base5">@color/blue4</color>
+    <color name="base6">@color/blue5</color>
+    <color name="base7">@color/blue6</color>
+    <color name="base8">@color/blue7</color>
+    <color name="baseDarkTransparent">@color/blue8Transparent</color>
+    <color name="base9">@color/blue8</color>
+
+    <color name="accent1">@color/red1</color>
+    <color name="accent2">@color/red2</color>
+    <color name="accent3">@color/red3</color>
+    <color name="accent4">@color/red4</color>
+    <color name="accent5">@color/red5</color>
+    <color name="accent6">@color/red6</color>
+    <color name="accent7">@color/red7</color>
+    <color name="accent8">@color/red5</color>
+
+    <color name="green">@color/darkGreen</color>
+    <color name="red">@color/darkRed</color>
+
+    <color name="iconColor">@color/base8</color>
+    <color name="iconColor2">@color/base6</color>
     <color name="menu_item_color">@color/black</color>
-    <color name="lineColor">@color/background8</color>
+    <color name="lineColor">@color/base8</color>
     <color name="textColor">@color/black</color>
 
-    <color name="coinColor">#b99800</color>
-    <color name="tokenColor">#303030</color>
+    <color name="coinColor">@color/golden</color>
+    <color name="tokenColor">@color/darkGrey</color>
 
-    <color name="transparent_shadow_color">#01000000</color>
-    <color name="semitransparent_shadow_color">#09000000</color>
-    <color name="least_transparent_shadow_color">#10000000</color>
 </resources>
