--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,6 @@
         <item name="android:textViewStyle">@style/TextViewStyle</item>
         <item name="android:textAppearance">@style/CVTextAppearance</item>
         <item name="android:alertDialogStyle">@style/DialogStyle</item>
-        <item name="android:toolbarStyle">@style/CVMaterialToolbar</item>
         <item name="bottomNavigationStyle">@style/BottomBar</item>
     </style>
 
@@ -17,7 +16,7 @@
     </style>
 
     <style name="CVMaterialToolbar" parent="Widget.MaterialComponents.Toolbar.Primary" >
-        <item name="android:background">@color/background1</item>
+        <item name="android:background">@color/base1</item>
     </style>
 
     <style name="TextViewStyle" parent="android:Widget.TextView">
@@ -31,25 +30,25 @@
     </style>
 
     <style name="BottomBar" parent="Widget.Material3.BottomNavigationView">
-        <item name="android:background">@color/background1</item>
+        <item name="android:background">@color/base1</item>
         <item name="itemTextColor">@color/iconColor</item>
         <item name="itemIconTint">@color/iconColor</item>
     </style>
 
     <style name="DialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="android:background">@color/background2</item>
+        <item name="android:background">@color/base2</item>
         <item name="android:textColor">@color/textColor</item>
         <item name="buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
         <item name="buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
     </style>
 
     <style name="NegativeButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="backgroundTint">@color/background1</item>
+        <item name="backgroundTint">@color/base1</item>
         <item name="android:textColor">@color/textColor</item>
     </style>
 
     <style name="PositiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="backgroundTint">@color/background1</item>
+        <item name="backgroundTint">@color/base1</item>
         <item name="android:textColor">@color/textColor</item>
     </style>
 
