--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,56 +6,90 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/settings_background_gradient"
-    tools:context=".views.fragments.SettingsFragment">
+    tools:context=".views.fragments.SettingsFragment"
+    android:padding="@dimen/medium_padding">
 
-    <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/switch_element"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/settings_header"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="@dimen/medium_padding"
-        android:text="Switch text"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:thumbTint="@color/base1"
-        app:trackTint="@color/base8"
-        app:useMaterialThemeColors="false" />
+        android:text="Settings"
+        android:textStyle="bold"
+        android:textSize="@dimen/big_text"/>
 
     <LinearLayout
+        android:id="@+id/mcap_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/switch_element">
+        app:layout_constraintTop_toBottomOf="@+id/settings_header">
 
         <TextView
+            android:id="@+id/mcap_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Min MCap" />
+            android:text="Min MCap"
+            android:paddingEnd="@dimen/medium_padding"/>
 
         <com.google.android.material.slider.Slider
+            android:id="@+id/mcap_slider"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:contentDescription="Minimum market cap"
             android:valueFrom="0"
-            android:valueTo="10"
-            app:labelBehavior="gone"
-            app:thumbColor="@color/accent6"
-            app:thumbRadius="20dp"
-            app:thumbWidth="20dp"
-            app:thumbHeight="20dp"
-            app:thumbElevation="10dp"
-            app:haloColor="@color/white"
-            app:trackHeight="5dp"
-            app:trackColorInactive="@color/accent3"
-            app:trackColorActive="@color/accent5"
+            android:valueTo="6"
+            android:stepSize="1"
             />
 
-        <EditText
-            android:layout_width="60dp"
-            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/mcap_text"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="viewEnd"
+            android:layout_gravity="end|center_vertical"
+            tools:text="Number"
+            android:paddingStart="@dimen/medium_padding"/>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/vol_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/mcap_container">
+
+        <TextView
+            android:id="@+id/vol_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Min Volume"
+            android:paddingEnd="@dimen/medium_padding"/>
+
+        <com.google.android.material.slider.Slider
+            android:id="@+id/vol_slider"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:contentDescription="Minimum market cap"
+            android:valueFrom="0"
+            android:valueTo="6"
+            android:stepSize="1"
+            />
+
+        <TextView
+            android:id="@+id/vol_text"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="viewEnd"
+            android:layout_gravity="end|center_vertical"
+            tools:text="Number"
+            android:paddingStart="@dimen/medium_padding"/>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
