--- a/app/src/main/res/layout/horizontal_line.xml
+++ b/app/src/main/res/layout/horizontal_line.xml
@@ -4,6 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="1px"
     android:layout_marginTop="@dimen/medium_padding"
-    android:background="@color/textColor">
-
-</View>
+    android:background="@color/textColor"/>
