--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,14 +5,15 @@
         <item name="android:textAppearance">@style/CVTextAppearance</item>
         <item name="android:alertDialogStyle">@style/DialogStyle</item>
         <item name="bottomNavigationStyle">@style/BottomBar</item>
+        <item name="sliderStyle">@style/CVSliderStyle</item>
     </style>
 
     <style name="CVTextAppearance" parent="TextAppearance.AppCompat">
         <item name="fontFamily">@font/roboto</item>
         <item name="android:textSize">12sp</item>
-        <item name="color">@color/black</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textColorLink">@color/black</item>
+        <item name="color">@color/textColor</item>
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:textColorLink">@color/textColor</item>
     </style>
 
     <style name="CVMaterialToolbar" parent="Widget.MaterialComponents.Toolbar.Primary" >
@@ -22,11 +23,9 @@
     <style name="TextViewStyle" parent="android:Widget.TextView">
         <item name="fontFamily">@font/roboto</item>
         <item name="android:textSize">12sp</item>
-        <item name="color">@color/black</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textColorLink">@color/black</item>
-        <item name="android:layout_marginTop">0dp</item>
-        <item name="android:layout_marginBottom">0dp</item>
+        <item name="color">@color/textColor</item>
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:textColorLink">@color/textColor</item>
     </style>
 
     <style name="BottomBar" parent="Widget.Material3.BottomNavigationView">
@@ -52,6 +51,37 @@
         <item name="android:textColor">@color/textColor</item>
     </style>
 
-    <style name="Theme.CryptoView" parent="Base.Theme.CryptoView" />
+    <style name="CVSliderStyle" parent="Widget.Material3.Slider">
+        <item name="backgroundTint">@color/base1</item>
+        <item name="labelStyle">@style/Widget.App.Tooltip</item>
+        <item name="labelBehavior">gone</item>
+        <item name="thumbColor">@color/accent6</item>
+        <item name="thumbRadius">20dp</item>
+        <item name="thumbWidth">20dp</item>
+        <item name="thumbHeight">20dp</item>
+        <item name="thumbElevation">5dp</item>
+        <item name="thumbTrackGapSize">20dp</item>
+        <item name="haloColor">@color/baseDarkTransparent</item>
+        <item name="haloRadius">20dp</item>
+        <item name="trackHeight">5dp</item>
+        <item name="trackColorInactive">@color/accent3</item>
+        <item name="trackColorActive">@color/accent6</item>
+        <item name="trackStopIndicatorSize">0dp</item>
+        <item name="tickVisible">false</item>
+        <item name="tickColorInactive">@color/accent3</item>
+        <item name="tickColorActive">@color/accent6</item>
+    </style>
 
+    <style name="Widget.App.Tooltip" parent="Widget.MaterialComponents.Tooltip">
+        <item name="android:textAppearance">@style/TextAppearance.App.Tooltip</item>
+        <item name="backgroundTint">@color/base5</item>
+    </style>
+
+    <style name="TextAppearance.App.Tooltip" parent="TextAppearance.MaterialComponents.Tooltip">
+        <item name="android:textColor">@color/accent4</item>
+        <item name="fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/roboto</item>
+    </style>
+
+    <style name="Theme.CryptoView" parent="Base.Theme.CryptoView" />
 </resources>
